--- a/templates/newsite/attraction_list.html
+++ b/templates/newsite/attraction_list.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>트라블로구</title>
+	<title>Traview</title>
 	<!-- Canonical URL usage -->
 	<link rel="canonical" href="https://aperitif.io/">
 
@@ -56,7 +56,7 @@
 <section>
   <div data-layout="_r">
     <div data-layout="al16">
-      <h1>Travlog</h1>
+      <h1>Traview</h1>
     </div>
   </div>
 </section>
